<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bookName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_name"
            android:textColor="@color/design_default_color_primary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/studName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student_name"
            android:textColor="@color/design_default_color_primary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/returned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/returned"
            android:textColor="@color/design_default_color_primary"
            android:textSize="20sp" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/markAsReturned"
        android:layout_width="86dp"
        android:layout_height="47dp"
        android:layout_marginLeft="20dp"
        android:checked="false"
        android:text="Mark as returned"
        android:visibility="gone" />

</LinearLayout>